SideNavBar layout bug fix

--- a/src/styles/views/_board.scss
+++ b/src/styles/views/_board.scss
@@ -2,4 +2,5 @@
   grid-column: 2;
   overflow-x: auto;
   min-height: 100vh;
+  padding-left: 20px;
 }
